--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mine Sweeper</title>
+    <title>Sprint1</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="onInIt()">
 
-    <h2>Score: <span></span></h2>
+<body onload="onInit()">
 
-    <div class="board"></div>
+    <h1>Mine Sweeper</h1>
+    <h3>Avihay Revivo</h3>
+    <button class="dark" onclick="darkMode()">Dark Mode</button>
+    <div class="hint-btns">
+        <button class="hints" onclick="showHints(this)">💡</button>
+        <button class="hints" onclick="showHints(this)">💡</button>
+        <button class="hints" onclick="showHints(this)">💡</button>
+    </div>
+    <h3 class="lives"></h3>
+    <h2 class="timer">Time: <span>0.000</span>s</h2>
+    <button class="safe" onclick="safeClick(gBoard)">Safe Click</button>
+
+    <table>
+        <tbody class="board"></tbody>
+    </table>
+    <div>
+        <button class="restart-btn" onclick="onInit()">😁</button>
+    </div>
+    <button class="level-btn" onclick="restartLevel(this)">Easy</button>
+    <button class="level-btn" onclick="restartLevel(this)">Medium</button>
+    <button class="level-btn" onclick="restartLevel(this)">Hard</button>
+    <button class="level-btn" onclick="restartLevel(this)">Legend</button>
 
     <div class="modal">
-        <h2>Game Over</h2>
-        <button onclick="onInIt()">🤯</button>
+        <h3 class="msg"></h3>
     </div>
-    <div class="modal">
-        <button class="start" onclick="onInIt()">😊</button>
-    </div>
-    
-    <div class="win">
-        <h2>You Win</h2>
-        <button onclick="onInIt()">😎</button>
-    </div>
-    
+
     <script src="js/utils.js"></script>
     <script src="js/game.js"></script>
-
 </body>
+
 </html>
