--- a/index.html
+++ b/index.html
@@ -1,41 +1,55 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Sprint1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mine Sweeper</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body onload="onInit()">
-
+<body onload="onInIt()">
     <h1>Mine Sweeper</h1>
-    <h3>Avihay Revivo</h3>
-    <button class="dark" onclick="darkMode()">Dark Mode</button>
-    <div class="hint-btns">
-        <button class="hints" onclick="showHints(this)">💡</button>
-        <button class="hints" onclick="showHints(this)">💡</button>
-        <button class="hints" onclick="showHints(this)">💡</button>
-    </div>
-    <h3 class="lives"></h3>
-    <h2 class="timer">Time: <span>0.000</span>s</h2>
-    <button class="safe" onclick="safeClick(gBoard)">Safe Click</button>
+    <h2>Lives Left : <span>2</span></h2>
 
-    <table>
-        <tbody class="board"></tbody>
-    </table>
-    <div>
-        <button class="restart-btn" onclick="onInit()">😁</button>
+    <p class="timer">
+        <span class="min">00</span> :
+        <span class="sec">00</span>
+    </p>
+
+    <div class="emoji">
+        <button onclick="onInIt()">😊</button>
     </div>
-    <button class="level-btn" onclick="restartLevel(this)">Easy</button>
-    <button class="level-btn" onclick="restartLevel(this)">Medium</button>
-    <button class="level-btn" onclick="restartLevel(this)">Hard</button>
-    <button class="level-btn" onclick="restartLevel(this)">Legend</button>
+
+    <div class="board"></div>
+
+
+
+
+    <div class="buttons">
+
+        <button class="btn" onclick="setBoardSize(4,3)">16</button>
+        <button class="btn" onclick="setBoardSize(8,14)">64</button>
+        <button class="btn" onclick="setBoardSize(12,32)">144</button>
+    </div>
+
+    <div class="hint">
+        <button onclick="hintMode()">💡</button>
+    </div>
 
     <div class="modal">
-        <h3 class="msg"></h3>
+        <h2>Game Over</h2>
     </div>
+
+    <div class="win">
+        <h2>You Win</h2>
+    </div>
+
 
     <script src="js/utils.js"></script>
     <script src="js/game.js"></script>
+
 </body>
 
 </html>
