--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <div class="safe">
         <button onclick="safeClick()">Safe</button>
     </div>
-    <div class="hint">
+    <!-- <div class="hint">
         <button onclick="checkHintMode(this)">💡</button>
         <button onclick="checkHintMode(this)">💡</button>
         <button onclick="checkHintMode(this)">💡</button>
-    </div>
+    </div> -->
 
     <div class="modal">
         <h2>Game Over</h2>
